--- a/style.css
+++ b/style.css
@@ -24,8 +24,13 @@ body {
     margin-right: 30px;
 }
 
+ul {
+    display: flex;
+}
+
 li {
     display: inline-block;
+    list-style-type: none;
     margin-left: 30px;
 }
 
@@ -226,4 +231,17 @@ a {
 .home:active {
     background-color: white;
     color: black;
+}
+
+.drop_menus {
+    position: absolute;
+    margin-top: 10px;
+    background: black;
+    color: white;
+    padding: 20px;
+    display: none;
+}
+
+.dropdown:hover .drop_menus {
+    display: block;
 }
